# retrospective_fantasy_afl_optimiser_2025

./: .gitignore  LICENSE  README.md  discussion.md  formulation.md  main.py  pyproject.toml  requirements.txt  run.py
data/: data_filter.json  gurobi_options.json  players_final.json  position_update_round_12.csv  position_update_round_6.csv  position_updates.csv  rounds.json  team_rules.json
output/: .gitkeep  solution.json  solution.md
scripts/: __init__.py  moreiras_magic_json_to_csv.py  player_json_to_csv.py  report_solution_to_markdown.py  solution_to_markdown.py
src/: __init__.py  data_loader.py  models.py  optimizer.py
tests/: conftest.py  perf_utils.py  test_bank_constraints.py  test_bank_constraints_integration.py  test_constraints_minimal.py  test_data_classes.py  test_decision_variable_creation.py  test_formulation_scaffold.py  test_io_config_loaders.py  test_io_helpers.py  test_io_integration.py  test_main_solve.py  test_minimal_model_integration.py  test_missing_price_trade_disallowed.py  test_model_input_data_queries.py  test_objective_function.py  test_perf_solver_regression.py  test_player_filtering.py  test_player_price_generator_export.py  test_player_price_generator_io.py  test_player_price_generator_pricing.py  test_position_eligibility_constraints.py  test_round_filtering.py  test_solution_markdown_bye_round_brackets.py  test_solution_markdown_financial_rows.py  test_solution_markdown_report.py  test_solution_markdown_round_summary_table.py  test_solution_markdown_starting_team_section.py  test_solution_markdown_trade_price_change.py  (+2 more)
(+17 files in other folders)
